# loan-site

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
GECL/: asgi.py  settings.py  urls.py  wsgi.py
GECL-Emprestimos/: LICENSE  README.md  manage.py
GECL-Emprestimos/GECL/: asgi.py  settings.py  urls.py  wsgi.py
GECL-Emprestimos/base/: urls.py  views.py
accounts/: forms.py  models.py  views.py
accounts/migrations/: 0001_initial.py
base/: admin.py  forms.py  models.py  urls.py  views.py
base/migrations/: 0001_initial.py  0002_alter_material_nome.py  0003_configuracao_alter_material_nome.py  0004_alter_usuario_email.py  0005_alter_usuario_options_alter_usuario_managers_and_more.py  0006_usuario_bloqueado.py  0007_usuario_is_superuser.py  0008_usuario_cargo_usuario_email.py  0009_emprestimomaterial_status.py
core/: asgi.py  settings.py  urls.py  views.py  wsgi.py
core/templates/: dashboard.html  index.html
emprestimos/: admin.py  models.py  views.py
emprestimos/migrations/: 0001_initial.py  0002_alter_emprestimo_data_devolvida.py  0002_emprestimo_quem_aprovou_alter_emprestimo_aluno.py  0002_rename_updated_emprestimo_data_devolvida.py  0003_alter_emprestimo_material_delete_material.py  0003_emprestimo_quantidade.py  0004_alter_emprestimo_created.py  (+1 more)
geclsite/: asgi.py  settings.py  wsgi.py
loans/: models.py  views.py
loans/migrations/: 0001_initial.py
moderator/: admin.py  forms.py  models.py  views.py
templates/: footer.html  main.html  navbar.html  sidebar.html
usuarios/: forms.py  models.py  views.py
(+50 files in other folders)
