[project]
name = "loan-site"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.11.0",
    "brotli==1.2.0",
    "dj-database-url==3.0.1",
    "django==5.2.8",
    "pillow==11.1.0",
    "pip==25.3",
    "psycopg2-binary==2.9.11",
    "python-dotenv==1.1.0",
    "sqlparse==0.5.3",
    "tzdata==2025.2",
    "whitenoise==6.11.0",
]
